Bug 91429 - [HSW] WARNING: plane A assertion failure, should be disabled but not
Summary: [HSW] WARNING: plane A assertion failure, should be disabled but not
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Maarten Lankhorst
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-22 12:49 UTC by Andreas Reis
Modified: 2017-07-24 22:45 UTC (History)
2 users (show)

See Also:
i915 platform: HSW
i915 features: display/Other


Attachments
dmesg (56.09 KB, text/plain)
2015-07-22 12:49 UTC, Andreas Reis
no flags Details
Update plane_mask during readout (716 bytes, patch)
2015-09-15 11:26 UTC, Maarten Lankhorst
no flags Details | Splinter Review

Description Andreas Reis 2015-07-22 12:49:18 UTC
Created attachment 117296 [details]
dmesg

Happens only on my 4770 desktop (one HDMI monitor), on my 4200U laptop it does not occur.

IIRC it happened since one of Maarten Lankhorst's commits for atomic modeset. In any case, journalctl lists it first on Jul 16 (I don't compile daily).

No apparent consequences. Driver module is compiled-in.

Originally the error was listed trice, now it's somehow only twice.

[    0.944544] WARNING: CPU: 0 PID: 61 at drivers/gpu/drm/i915/intel_display.c:1374 assert_planes_disabled+0xe5/0x140()
[    0.944545] plane A assertion failure, should be disabled but not
[    0.944545] Modules linked in:
[    0.944546] CPU: 0 PID: 61 Comm: kworker/0:1 Not tainted 4.2.0-1-cu #1
[    0.944547] Hardware name: Gigabyte Technology Co., Ltd. G1.Sniper M5/G1.Sniper M5, BIOS T01 02/03/2015
[    0.944549] Workqueue: events output_poll_execute
[    0.944550]  0000000000000000 000000008ed35dd8 ffff88041c0a39e8 ffffffff8193ba5a
[    0.944551]  0000000000000000 ffff88041c0a3a40 ffff88041c0a3a28 ffffffff810e5366
[    0.944552]  0000000100000000 ffff88041b6a0000 0000000000000000 0000000000000000
[    0.944552] Call Trace:
[    0.944555]  [<ffffffff8193ba5a>] dump_stack+0x4c/0x6e
[    0.944557]  [<ffffffff810e5366>] warn_slowpath_common+0x86/0xc0
[    0.944557]  [<ffffffff810e53f5>] warn_slowpath_fmt+0x55/0x70
[    0.944559]  [<ffffffff8161a0c5>] assert_planes_disabled+0xe5/0x140
[    0.944560]  [<ffffffff816243eb>] intel_disable_pipe+0x4b/0x2a0
[    0.944561]  [<ffffffff816246ca>] haswell_crtc_disable+0x8a/0x2d0
[    0.944562]  [<ffffffff81634c86>] intel_atomic_commit+0x116/0x800
[    0.944564]  [<ffffffff815b706d>] ? drm_atomic_get_connector_state+0x4d/0x110
[    0.944565]  [<ffffffff815b6b97>] drm_atomic_commit+0x37/0x60
[    0.944566]  [<ffffffff81592da7>] drm_atomic_helper_set_config+0x1c7/0x430
[    0.944567]  [<ffffffff815a5a76>] drm_mode_set_config_internal+0x66/0x100
[    0.944569]  [<ffffffff81594d82>] restore_fbdev_mode+0xc2/0xf0
[    0.944570]  [<ffffffff81596c69>] drm_fb_helper_restore_fbdev_mode_unlocked+0x29/0x70
[    0.944571]  [<ffffffff81596cd2>] drm_fb_helper_set_par+0x22/0x40
[    0.944572]  [<ffffffff81596bfa>] drm_fb_helper_hotplug_event+0xca/0x110
[    0.944574]  [<ffffffff81643e3e>] intel_fbdev_output_poll_changed+0x1e/0x20
[    0.944575]  [<ffffffff8158b31b>] drm_kms_helper_hotplug_event+0x2b/0x40
[    0.944575]  [<ffffffff8158b516>] output_poll_execute+0x186/0x1a0
[    0.944577]  [<ffffffff810fcc5e>] process_one_work+0x14e/0x440
[    0.944578]  [<ffffffff810fcf98>] worker_thread+0x48/0x4a0
[    0.944579]  [<ffffffff810fcf50>] ? process_one_work+0x440/0x440
[    0.944580]  [<ffffffff810fcf50>] ? process_one_work+0x440/0x440
[    0.944581]  [<ffffffff81102838>] kthread+0xd8/0xf0
[    0.944582]  [<ffffffff81102760>] ? kthread_worker_fn+0x170/0x170
[    0.944583]  [<ffffffff8194279f>] ret_from_fork+0x3f/0x70
[    0.944584]  [<ffffffff81102760>] ? kthread_worker_fn+0x170/0x170
Comment 1 Andreas Reis 2015-08-20 15:28:13 UTC
Trace as of drm-intel-nightly: 2015y-08m-19d-08h-17m-47s

[    0.962477] WARNING: CPU: 0 PID: 6 at drivers/gpu/drm/i915/intel_display.c:1374 assert_planes_disabled+0xe5/0x140()
[    0.962478] plane A assertion failure, should be disabled but not
[    0.962479] Modules linked in:
[    0.962481] CPU: 0 PID: 6 Comm: kworker/u16:0 Tainted: G        W       4.2.0-1-cu #1
[    0.962482] Hardware name: Gigabyte Technology Co., Ltd. G1.Sniper M5/G1.Sniper M5, BIOS T01 02/03/2015
[    0.962487] Workqueue: events_unbound async_run_entry_fn
[    0.962488]  0000000000000000 0000000017102c1e ffff88041d2c3688 ffffffff81941f98
[    0.962489]  0000000000000000 ffff88041d2c36e0 ffff88041d2c36c8 ffffffff810e5386
[    0.962489]  0000000100000000 ffff88041b6b0000 0000000000000000 0000000000000000
[    0.962490] Call Trace:
[    0.962493]  [<ffffffff81941f98>] dump_stack+0x4c/0x6e
[    0.962497]  [<ffffffff810e5386>] warn_slowpath_common+0x86/0xc0
[    0.962498]  [<ffffffff810e5415>] warn_slowpath_fmt+0x55/0x70
[    0.962499]  [<ffffffff8161fd45>] assert_planes_disabled+0xe5/0x140
[    0.962501]  [<ffffffff81629d4b>] intel_disable_pipe+0x4b/0x2a0
[    0.962502]  [<ffffffff8162a02a>] haswell_crtc_disable+0x8a/0x2e0
[    0.962504]  [<ffffffff81632837>] intel_atomic_commit+0x127/0x1390
[    0.962507]  [<ffffffff815b842e>] ? drm_atomic_check_only+0x21e/0x550
[    0.962507]  [<ffffffff815b805d>] ? drm_atomic_get_connector_state+0x4d/0x110
[    0.962508]  [<ffffffff815b8797>] drm_atomic_commit+0x37/0x60
[    0.962511]  [<ffffffff815944b7>] drm_atomic_helper_set_config+0x1c7/0x430
[    0.962513]  [<ffffffff815a7186>] drm_mode_set_config_internal+0x66/0x100
[    0.962515]  [<ffffffff81596552>] restore_fbdev_mode+0xc2/0xf0
[    0.962516]  [<ffffffff815984d9>] drm_fb_helper_restore_fbdev_mode_unlocked+0x29/0x70
[    0.962516]  [<ffffffff81598551>] drm_fb_helper_set_par+0x31/0x60
[    0.962518]  [<ffffffff816493da>] intel_fbdev_set_par+0x1a/0x60
[    0.962520]  [<ffffffff814df0a0>] fbcon_init+0x540/0x5c0
[    0.962521]  [<ffffffff8155ff8e>] visual_init+0xce/0x130
[    0.962522]  [<ffffffff81561ace>] do_bind_con_driver+0x1be/0x3e0
[    0.962524]  [<ffffffff81562029>] do_take_over_console+0x149/0x1a0
[    0.962525]  [<ffffffff8193fd83>] ? printk+0x55/0x6b
[    0.962526]  [<ffffffff814df177>] do_fbcon_takeover+0x57/0xb0
[    0.962527]  [<ffffffff814e3393>] fbcon_event_notify+0x663/0x760
[    0.962528]  [<ffffffff811035be>] notifier_call_chain+0x4e/0x80
[    0.962529]  [<ffffffff8110397b>] __blocking_notifier_call_chain+0x4b/0x70
[    0.962530]  [<ffffffff811039b6>] blocking_notifier_call_chain+0x16/0x20
[    0.962531]  [<ffffffff814e911b>] fb_notifier_call_chain+0x1b/0x20
[    0.962532]  [<ffffffff814eb1f5>] register_framebuffer+0x215/0x350
[    0.962533]  [<ffffffff815987df>] drm_fb_helper_initial_config+0x25f/0x410
[    0.962534]  [<ffffffff81649e3b>] intel_fbdev_initial_config+0x1b/0x20
[    0.962535]  [<ffffffff811050dc>] async_run_entry_fn+0x4c/0x160
[    0.962537]  [<ffffffff810fccbe>] process_one_work+0x14e/0x440
[    0.962538]  [<ffffffff810fcff8>] worker_thread+0x48/0x4a0
[    0.962539]  [<ffffffff810fcfb0>] ? process_one_work+0x440/0x440
[    0.962540]  [<ffffffff81102958>] kthread+0xd8/0xf0
[    0.962541]  [<ffffffff81102880>] ? kthread_worker_fn+0x170/0x170
[    0.962542]  [<ffffffff81948d5f>] ret_from_fork+0x3f/0x70
[    0.962543]  [<ffffffff81102880>] ? kthread_worker_fn+0x170/0x170
Comment 2 Maarten Lankhorst 2015-09-15 11:26:57 UTC
Created attachment 118283 [details] [review]
Update plane_mask during readout

It looks like in the DMAR case the state for the initial fb cannot be updated correctly, which means it doesn't get disabled during the first modeset.

Does the above patch fix it?
Comment 3 Andreas Reis 2015-09-15 14:59:08 UTC
Yes, warnings are gone.
Comment 4 Maarten Lankhorst 2015-09-16 09:12:09 UTC
Excellent, I've sent a patch to fix it and I've cc'd you on it.

Will change to resolved when this hits -fixes. :)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.